--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,8 @@
 
   {% if page.subtitle %}
   <meta name="description" content="{{ page.subtitle }}">
+  <br />
+  <span class="small">[CV] [Google Scholar] [Github] [Email]</span>
   {% endif %}
 
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }} {{ site.title-separator }} {{ site.description }}" href="{{ '/feed.xml' | absolute_url }}" />
