--- a/_includes/header.html
+++ b/_includes/header.html
@@ -56,7 +56,7 @@
             <hr class="small">
             <span class="{{ include.type }}-subheading">{{ page.subtitle }}</span>
             <br />
-            <span class="small">[CV] [Google Scholar] [Github] [Email]</span>
+            <span class="small">[CV] [Scholar] <a href="https://github.com/chongzhou96">[Github]</a> <a href="mailto:cczhou@ucdavis.edu">[Email]</a></span>
 			{% else %}
 			<h2 class="{{ include.type }}-subheading">{{ page.subtitle }}</h2>
 			{% endif %}
