Add google scholar link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -56,7 +56,7 @@
             <hr class="small">
             <span class="{{ include.type }}-subheading">{{ page.subtitle }}</span>
             <br />
-            <span class="small"><a href="Chong_Zhou_CV.pdf">[CV]</a> [Scholar] <a href="https://github.com/chongzhou96">[Github]</a> <a href="mailto:cczhou@ucdavis.edu">[Email]</a></span>
+            <span class="small"><a href="Chong_Zhou_CV.pdf">[CV]</a> <a href="https://scholar.google.com/citations?user=1mCYe_oAAAAJ&hl=en&oi=sra">[Scholar]</a> <a href="https://github.com/chongzhou96">[Github]</a> <a href="mailto:cczhou@ucdavis.edu">[Email]</a></span>
 			{% else %}
 			<h2 class="{{ include.type }}-subheading">{{ page.subtitle }}</h2>
 			{% endif %}
